--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,6 @@ var/
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
-*.spec
 
 # Installer logs
 pip-log.txt
@@ -62,3 +61,7 @@ target/
 
 #Ipython Notebook
 .ipynb_checkpoints
+
+#Custom
+*.ico
+*.nsi
